init: dioxus-based UI.

--- a/c070r-lib/Cargo.toml
+++ b/c070r-lib/Cargo.toml
@@ -2,6 +2,8 @@
 name = "c070r-lib"
 version = "0.1.0"
 edition = "2021"
+authors = ["msukanen <markku.sukanen@gmail.com>"]
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 rand = "0.8"
